# AI-QUIC-harnessed

./: .dockerignore  .gitignore  Makefile  break  debug  log
ai-quic/: CMakeLists.txt  README.md
ai-quic/build.stale-20260415/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ai-quic/build.stale-20260415/Testing/Temporary/: CTestCostData.txt
ai-quic/build.stale-20260415/boringssl/: Makefile  cmake_install.cmake
ai-quic/demo/: README.md  client_main.c  demo_cli.c  demo_cli.h  server_main.c
ai-quic/demo/common/: demo_cli.c  demo_internal.h
ai-quic/demo/http09/: http09_client.c  http09_server.c  self_check.c
ai-quic/include/ai_quic/: ai_quic.h  ai_quic_types.h  ai_quic_version.h  cid.h  conn.h  dispatcher.h  endpoint.h  frame.h  fs.h  log.h  packet.h  pn_space.h  qlog.h  result.h  stream.h  tls.h  transport_params.h  version.h
ai-quic/interop/: Dockerfile  README.md  run_endpoint.sh  setup.sh  testcase_dispatch.sh
ai-quic/interop/lib/: common.sh
ai-quic/src/: CMakeLists.txt
ai-quic/src/common/: README.md  ai_quic_version.c  buffer.c  cid.c  common_internal.h  fs.c  log.c  path.c  qlog.c  random.c  result.c  time.c
ai-quic/src/congestion_control/: README.md
ai-quic/src/http3/: README.md
ai-quic/src/tls/: README.md  boringssl_compat.cc  initial_secret.c  key_schedule.c  keyset.c  tls_ctx.c  tls_events.c  tls_internal.h  tls_session.c
ai-quic/src/transport/: README.md  ack.c  conn.c  conn_io.c  conn_state.c  conn_state_helpers.c  crypto_stream.c  dispatcher.c  endpoint.c  frame_codec.c  invariant.c  loss.c  packet_codec.c  pn_space.c  stream.c  timer.c  token.c  transport_internal.h  transport_params.c  version.c  version_negotiation.c
ai-quic/tests/: README.md
ai-quic/tests/fixtures/: README.md
ai-quic/tests/integration/: test_handshake.c
ai-quic/tests/interop/: test_local_handshake.sh  test_run_endpoint.sh  test_versionnegotiation.c
ai-quic/tests/support/: test_support.c  test_support.h
ai-quic/tests/unittest/: README.md  test_smoke.c  test_unit.c
docs/: menu.md
docs/boringssl/: README.md  api-conventions.md  breaking-changes.md  building.md  contributing.md  fuzzing.md  incorporating.md  porting.md  public-headers.md  sandboxing.md  style.md
docs/ietf/notes/: 9000.md  9001.md  9002.md  9114.md  9204.md  9221.md  9368.md  9369.md  qlog-event.md  qlog.md
docs/ietf/txt/: draft-ietf-quic-qlog-quic-events-12.txt  qlog.txt  rfc9368.txt
docs/mega-linter/: config.md  linter-list.md  run-locally.md
docs/plans/: plan-ai.md  plan-quic.md  process.md  repo-file-hierarchy.md  step01-handshake-doc-index.md  step01-handshake-logic-design.md  step02-transfer-doc-index.md  step02-transfer-logic-design.md  step03-v2-doc-index.md  step03-v2-logic-design.md  step04-chacha20-doc-index.md  step04-chacha20-logic-design.md  step05-retry-doc-index.md  step05-retry-logic-design.md
docs/quic-interop-runner/: how-to-run.md  implement-requirements.md  quic-implement-images.md  quic-test-cases.md
docs/refs/: lsquic.md  mvfst.md  xquic.md
ietf/notes/: 9000 copy.md  9000.md
plans/: plan-ai.md  plan-quic.md
reports/: record.md  transfer-audit.md
skills/code-audit-loop/: SKILL.md
skills/code-audit-loop/agents/: openai.yaml
skills/code-audit-loop/references/: audit-agent-contract.md
skills/doc-reference/: skill.md
skills/external-memory-files/: SKILL.md
skills/readability-design-check/: SKILL.md
skills/readability-design-check/agents/: openai.yaml
skills/readability-design-check/references/: official-principles.md
skills/skill-index/: SKILL.md
skills/skill-index/agents/: openai.yaml
skills/skill-index/references/: available-skills.md
skills/staged-engineering-governance/: SKILL.md
